--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Organize MP3 files",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js --exec babel-node",
+    "dev": "nodemon --exec babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,6 +16,10 @@
   "homepage": "https://github.com/ricproenca",
   "license": "GPL-2.0",
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -24,6 +28,12 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "install": "^0.12.2",
+    "npm": "^6.9.0",
     "prettier": "^1.17.0"
+  },
+  "dependencies": {
+    "music-metadata": "^3.6.0",
+    "nodemon": "^1.18.11"
   }
 }
